practice/nginx-k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-deployment
  namespace: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  # template is a pod.yml
  template: 
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/www/html
              name: my-volume
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
