practice/nginx-k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-notes-ingress
  namespace: ns4-nginx

spec:
  rules:
    - http:
      paths:
        pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
